# PAPI4K

./: .gitignore  CHANGES.md  README.rst  buildqt.py  papi.py  requirements.txt  run_papi.py  setup.cfg  setup.py
QL/: compile.sh  mainGUI.py  panicQL.ui  runQL.py
QL4/: mainGUI.py  panicQL.py  panicQL.ui  panicQL_resources_rc.py  runQL.py
astromatic/: ldac.py  py-sextractor.param  scamp.py  sextractor.py  swarp.py
commissioning/: convRaw2CDS.py  get-centers.py  getDarks.py  getImageOffsets.py  history_staff_panic1.txt  log_mountcycle.py  log_mounting22.txt  log_mounting35.txt  log_opcycle.py  p_47_cyc7_nonlinearity_data.py  p_50_tiltcheck.py  p_51_tiltcheck.py  p_56_cyc9_test_nonlinearity.py  p_59_imstat.py  plot_single_plate.py  runPsfmeasure.py  runStarfocus.py  run_mult_starfocus.sh  split_region.py  tilt_guide.txt
config_files/: papi.cfg  papi_o2k.cfg  papi_o2k_v1.cfg  papi_panic22.cfg  papi_udit22.cfg  papirc  scamp.conf
datahandler/: clfits.py  datacollector.py  dataset.py
dev_tests/: test_menu.py  test_numba.py
docs/: conf.py  copy.sh  data.rst  index.rst  install.rst  processing.rst
misc/: align_stack_cube.py  check_papi_modules.py  cleanBadPix.py  collapse.py  config.py  createDataSeq.py  fileUtils.py  fit.py  fix_omega_files.py  genLogsheet.py  health.py  imtrim.py  low_pass_filter.py  make_release.py  mef.py  paLog.py  scaleImage.py  statutils.py  utils.py  version.py
paper/: PAPI Pipeline JOSS Paper.tex  paper.md  references.bib
papi/: papi.py  run_papi.py
papi_tests/: test_basic.py  test_caldark.py  test_iraf.py
photo/: catalog_query.py  coords.py  match.py  photometry.py
reduce/: __init__.py  applyDarkFlat.py  astrowarp.py  calBPM.py  calBPM_2.py  calBPM_3.py  calCombineFF.py  calDark.py  calDarkModel.py  calDark_ast.py  calDomeFlat.py  calGainMap.py  calSuperFlat.py  calTwFlat.py  checkQuality.py  correctNonLinearity.py  dxtalk.py  eval_focus_serie.py  makeobjmask.py  montage.py  reductionset.py  skySubtraction.py  solveAstrometry.py  threadsmod.py
scripts/: OT_cleanup.sh  bashrc  bashrc.papi  bashrc_panic22  papirc_panic22  reduce.sh  start_papi_env.sh  start_ql.sh
system/: build_papi_zip.sh
test/: astro_uncertainties.py  fwhm.py  fwhm_sex_v3.py  fwhm_v4.py  img_distor_corr_v5.py  img_distor_v3.py  nir-photometry_v4.py  run_tests.sh
tests/: estimate_seeing_jb.py  test_function_setup.py
(+116 files in other folders)
